--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.6",
+    "@emotion/server": "^11.10.0",
+    "@emotion/styled": "^11.10.6",
     "@moralisweb3/next": "^2.14.2",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
     "@next/font": "13.1.6",
+    "axios": "^1.3.4",
+    "btoa": "^1.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.7.2",
+    "mongodb": "^5.1.0",
     "moralis": "^2.14.2",
     "next": "13.1.6",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "remove.bg": "^1.3.0",
+    "swiper": "^9.0.5",
+    "swr": "^2.0.4",
+    "use-snipcart": "^1.2.0",
     "wagmi": "^0.11.5"
   }
 }
