adding base products api

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "ethers": "^5.7.2",
+    "lodash": "^4.17.21",
     "mongodb": "^4.11.0",
     "moralis": "^2.14.2",
     "next": "13.1.6",
